--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -8,10 +8,9 @@ on:
   workflow_dispatch:
 
 jobs:
-
   swift-code-checks:
     name: Code Tests
-    runs-on: macos-latest
+    runs-on: macos-12
 
     steps:
       - uses: actions/checkout@v3
@@ -24,3 +23,12 @@ jobs:
 
       - name: Run unit tests
         run: xcodebuild test -scheme UID2IMAPluginTests -sdk iphonesimulator16.2 -destination "OS=16.2,name=iPhone 14"
+
+  vulnerability-scan:
+      name: Vulnerability Scan
+      runs-on: ubuntu-latest
+      needs: [swift-code-checks]
+
+      steps:
+        - name: Vulnerability Scan
+          uses: IABTechLab/uid2-shared-actions/actions/vulnerability_scan_filesystem@v2
